# NBA-Simulverse

./: .gitignore  README.md  pyproject.toml
app/: dashboard.py
docs/: PROPOSAL.md  ROADMAP.md
logs/: picks.csv
scripts/: 01_preprocess.py  02_build_sequences.py  03_train_baseline.py  04_train_model.py  05_evaluate.py  06_simulate.py  07_sliced_eval.py  08_roster_sim.py  09_train_ensemble.py  10_build_career_sequences.py  11_train_career.py  12_career_sim.py  13_validate_career.py  15_live_predict.py  16_daily_picks.py  17_log_results.py  18_sports_gpt.py  run_daily_picks.bat
src/career_arc/: config.py  model.py
src/career_arc/data/: build_career_sequences.py  dataset.py
src/career_arc/simulation/: career_sim.py
src/career_arc/training/: trainer.py
src/live_feed/: context_builder.py  fetcher.py  news.py
src/nba_gpt/: config.py
src/nba_gpt/baseline/: xgboost_baseline.py
src/nba_gpt/data/: dataset.py  features.py  preprocess.py  sequences.py
src/nba_gpt/evaluation/: evaluate.py  sliced_eval.py
src/nba_gpt/model/: embeddings.py  heads.py  transformer.py
src/nba_gpt/simulation/: engine.py  ensemble.py  roster.py  sequence_sim.py
src/nba_gpt/training/: scheduler.py  trainer.py
tests/: test_features.py  test_model.py  test_preprocess.py  test_sequences.py  test_trainer.py
