[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-gpt"
version = "0.1.0"
description = "NBA-GPT: Basketball foundation model using self-supervised learning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nba_gpt --cov-report=term-missing -v"
